--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@ body {
     src: url(../fonts/Roboto-Regular.woff2);
 }
 
+@font-face {
+    font-family: poppins;
+    src: url(../fonts/Poppins-Regular.woff2);
+}
+
 .logo {
     text-align: center;
 }
@@ -69,6 +74,6 @@ hr {
 
 .input-signin,
 .input-signup {
-    font-family: roboto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500;
 }
